API методы для получения слоев
